database-dc.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  creationTimestamp: null
  generation: 1
  labels:
    app: ruby-helloworld-sample
    template: application-template-stibuild
  name: database
spec:
  replicas: 1
  selector:
    name: database
  strategy:
    recreateParams:
      mid:
        execNewPod:
          command:
          - /bin/true
          containerName: ruby-helloworld-database
          env:
          - name: CUSTOM_VAR2
            value: custom_value2
          volumes:
          - ruby-helloworld-data
        failurePolicy: Abort
      post:
        execNewPod:
          command:
          - /bin/true
          containerName: ruby-helloworld-database
          env:
          - name: CUSTOM_VAR2
            value: custom_value2
          volumes:
          - ruby-helloworld-data
        failurePolicy: Ignore
      pre:
        execNewPod:
          command:
          - /bin/true
          containerName: ruby-helloworld-database
          env:
          - name: CUSTOM_VAR1
            value: custom_value1
          volumes:
          - ruby-helloworld-data
        failurePolicy: Abort
      timeoutSeconds: 600
    resources: {}
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: database
    spec:
      containers:
      - env:
        - name: MYSQL_USER
          value: userY4D
        - name: MYSQL_PASSWORD
          value: uaPEMRkK
        - name: MYSQL_DATABASE
          value: root
        image: registry.access.redhat.com/openshift3/mysql-55-rhel7:latest
        imagePullPolicy: Always
        name: ruby-helloworld-database
        ports:
        - containerPort: 3306
          protocol: TCP
        resources: {}
        securityContext:
          capabilities: {}
          privileged: false
        terminationMessagePath: /dev/termination-log
        volumeMounts:
        - mountPath: /var/lib/mysql/data
          name: ruby-helloworld-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir: {}
        name: ruby-helloworld-data
  test: false
  triggers:
  - type: ConfigChange
status:
  availableReplicas: 1
  observedGeneration: 1
  replicas: 1
  updatedReplicas: 1
